--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,30 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# --- GLOBAL IGNORE (Berlaku untuk Client & Server) ---
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+# Dependency directories (folder sampah yang berat)
+node_modules/
+npm-debug.log
+yarn-error.log
 
-# testing
-/coverage
-
-# production
-/build
-
-# misc
-.DS_Store
+# Environment variables (SANGAT PENTING: RAHASIA)
 .env
-.env.*
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# OS Generated files
+.DS_Store
+Thumbs.db
+
+# --- CLIENT SPECIFIC ---
+# Production build output
+client/build/
+client/dist/
+
+# Testing coverage
+client/coverage/
+
+# --- SERVER SPECIFIC ---
+# Logs
+server/logs/
+*.log
