--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
@@ -12,7 +13,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "file-saver": "^2.0.5",
-    "firebase": "^12.6.0",
+    "firebase": "^12.7.0",
     "fs": "^0.0.1-security",
     "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.3",
@@ -23,6 +24,7 @@
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-draggable": "^4.5.0",
+    "react-moveable": "^0.56.0",
     "react-qr-code": "^2.0.18",
     "react-scripts": "5.0.1",
     "react-to-print": "^3.2.0",
