--- a/client/package.json
+++ b/client/package.json
@@ -26,8 +26,10 @@
     "react-draggable": "^4.5.0",
     "react-moveable": "^0.56.0",
     "react-qr-code": "^2.0.18",
+    "react-router-dom": "^7.11.0",
     "react-scripts": "5.0.1",
     "react-to-print": "^3.2.0",
+    "recharts": "^3.6.0",
     "uuid": "^13.0.0",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
